Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -31,9 +31,14 @@
         <h1>
 <a id="o-curso-definitivo-de-análises-espaciais-no-r" class="anchor" href="#o-curso-definitivo-de-an%C3%A1lises-espaciais-no-r" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>O curso definitivo de análises espaciais no R!</h1>
 
-<p>Perguntas iniciais:
-Como correlacionar duas variáveis que variam no espaço levando em conta autocorrelação espacial?
-Como realizar análises espaciais levando em conta apenas determinados lugares; e.g., só o ambiente marinho?</p>
+<p>Quer saber a resposta para perguntas do tipo: </p>
+
+<ul>
+<li>Como correlacionar duas variáveis que variam no espaço levando em conta autocorrelação espacial? </li>
+<li>Como realizar análises espaciais levando em conta apenas determinados lugares; e.g., só o ambiente marinho?</li>
+</ul>
+
+<p>Pergunte ao pequeno repositório de saber!!</p>
       </section>
     </div>
 
